--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,104 @@
+input {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid grey;
+}
 
+/* PAYMENT */
+.creditCardForm {
+  /* max-width: 700px;
+  background-color: #fff;
+  margin: 100px auto; */
+  overflow: hidden;
+  padding: 25px;
+  color: #4c4e56;
+}
+.creditCardForm label {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.creditCardForm .heading h1 {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  color: #4c4e56;
+}
+.creditCardForm .payment {
+  float: left;
+  font-size: 18px;
+  padding: 10px 25px;
+  margin-top: 20px;
+  position: relative;
+}
+.creditCardForm .payment .form-group {
+  float: left;
+  margin-bottom: 15px;
+}
+.creditCardForm .payment .form-control {
+  line-height: 40px;
+  height: auto;
+  padding: 0 16px;
+}
+.creditCardForm .owner {
+  width: 63%;
+  margin-right: 10px;
+}
+.creditCardForm .CVV {
+  width: 35%;
+}
+.creditCardForm #card-number-field {
+  width: 100%;
+}
+.creditCardForm #expiration-date {
+  width: 49%;
+}
+.creditCardForm #credit_cards {
+  width: 50%;
+  margin-top: 25px;
+  text-align: right;
+}
+.creditCardForm #pay-now {
+  width: 100%;
+  margin-top: 25px;
+}
+.creditCardForm .payment .btn {
+  width: 100%;
+  margin-top: 3px;
+  font-size: 24px;
+  /* background-color: #2ec4a5; */
+  color: white;
+}
+.creditCardForm .payment select {
+  padding: 10px;
+  margin-right: 15px;
+}
+.transparent {
+  opacity: 0.2;
+}
+@media (max-width: 650px) {
+  .creditCardForm .owner,
+  .creditCardForm .CVV,
+  .creditCardForm #expiration-date,
+  .creditCardForm #credit_cards {
+    width: 100%;
+  }
+  .creditCardForm #credit_cards {
+    text-align: left;
+  }
+}
 
+input:focus:invalid,
+textarea:focus:invalid {
+  border: solid 2px #f5192f;
+}
 
+input:focus:valid,
+textarea:focus:valid {
+  border: solid 2px #18e109;
+  background-color: #fff;
+}
+
+/* Order recap */
+.bg-pay {
+  background-color: #eee;
+  border-radius: 2px;
+}
