--- a/src/App.css
+++ b/src/App.css
@@ -127,4 +127,6 @@ textarea:focus:valid {
   color: black;
 }
 
-/* .gitIgnore CONTENT */
+/* _redirects CONTENT */
+/* /orders    https://miro-estore-app.herokuapp.com/orders   200 */
+/*    https://miro-estore-app.herokuapp.com/:splat 
